First release with xlsx file loading ability

--- a/src/com/books/business/MessageForm.form
+++ b/src/com/books/business/MessageForm.form
@@ -196,8 +196,8 @@
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel3">
               <Properties>
-                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/com/payroll/images/info.png"/>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+                  <Connection code="new javax.swing.ImageIcon(getClass().getResource(&quot;/com/books/images/info.png&quot;))" type="code"/>
                 </Property>
               </Properties>
             </Component>
